--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -50,12 +50,12 @@
     border-radius: 2px;
   }
  
-  .connect {
+  .header__connect {
     display: flex;
     align-items: center;
     margin-left: auto;
   }
-  .connect__site {
+  .connect__list {
     display: flex;
     gap: 30px;
   }
