--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './layouts/container';
 @import './utils/hidden';
 @import './layouts/subtitle';
+@import './component/caption';
 
 @import './component/logo';
 @import './component/header';
