--- a/sass/component/_social.scss
+++ b/sass/component/_social.scss
@@ -1,14 +1,14 @@
-.specialist-soc-list {
+.soc {
     display: flex;
     justify-content: center;
     gap: 10px;
   }
   
-  .specialist-soc-item {
+  .soc__item {
     width: 44px;
     height: 44px;
   }
-  .specialist-soc-link {
+  .soc__link {
     width: 100%;
     height: 100%;
     background: #ffffff;
@@ -22,11 +22,11 @@
       background-color: var(--accent-color);
     }
   }
-  .specialist-soc-icon {
+  .soc__icon {
     fill: #afb1b8;
     transition: fill var(--tra);
-    .specialist-soc-link:hover &,
-    .specialist-soc-link:focus & {
+    .soc__link:hover &,
+    .soc__link:focus & {
       fill: #ffffff;
     }
   }
