--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,8 +1,8 @@
-.hidden-list {
+.cart-list {
     display: flex;
     gap: var(--card-set-gap);
   }
-  .hidden-item {
+  .cart-list__item {
     width: 270px;
     &::before {
       display: block;
@@ -15,35 +15,29 @@
       background-color: var(--background-grup);
       }
   }
-
-  .icon-antenna::before {
-    background-image: url(../images/antenna.svg);
-    background-size: 70px;
-  }
-  .icon-clock::before {
-    background-image: url(../images/clock.svg);
-     background-size: 70px;
-  }
-  .icon-diagram::before {
-    background-image: url(../images/diagram.svg);
-     background-size: 70px;
-  }
-  .icon-astronaut::before {
-    background-image: url(../images/astronaut.svg);
-     background-size: 70px;
-  }
-  .caption {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-  }
-  .content {
+  .cart-list__content {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
   }
+
+  .icon__antenna::before {
+    background-image: url(../images/antenna.svg);
+    background-size: 70px;
+  }
+  .icon__clock::before {
+    background-image: url(../images/clock.svg);
+     background-size: 70px;
+  }
+  .icon__diagram::before {
+    background-image: url(../images/diagram.svg);
+     background-size: 70px;
+  }
+  .icon__astronaut::before {
+    background-image: url(../images/astronaut.svg);
+     background-size: 70px;
+  }
+  
+  
